<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Study.StudyFragment">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeActivity">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_rowWeight="1"
                android:backgroundTint="#fff"
                app:cardElevation="20dp"
                tools:targetApi="lollipop">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical|bottom"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/montserrat_alternates"
                        android:gravity="center"
                        android:text="@string/office"
                        android:textColor="#000000"
                        android:textSize="20sp"

                        />android:id="@+id/txtcgpCalculator"

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#000000" />


                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_rowWeight="1"
                android:backgroundTint="#37474f"
                app:cardElevation="20dp"
                tools:targetApi="lollipop">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical|bottom"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtIstyearStudy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/montserrat_alternates"
                        android:gravity="center"
                        android:text="@string/fy"
                        android:textColor="#fff"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#fff" />


                </LinearLayout>


            </android.support.v7.widget.CardView>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="4">

                <android.support.v7.widget.CardView

                    android:layout_columnWeight="1"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_rowWeight="1"
                    android:backgroundTint="#1de9b6"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="10dp"
                    tools:targetApi="lollipop">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical|bottom"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginBottom="20dp"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/montserrat_alternates"
                            android:gravity="center"
                            android:text="@string/electronics"
                            android:textColor="#000000"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/txtElectronicsStudy"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/roundbutton"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/explore"
                            android:textAllCaps="false"
                            android:textColor="#ffffff"
                            android:textSize="18sp" />


                    </LinearLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView

                    android:layout_columnWeight="1"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_rowWeight="1"
                    android:backgroundTint="#ff5252"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="10dp"
                    tools:targetApi="lollipop">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical|bottom"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginBottom="20dp"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/montserrat_alternates"
                            android:gravity="center"
                            android:text="@string/comps"
                            android:textColor="#000000"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/txtComputerStudy"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/roundbutton"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/explore"
                            android:textAllCaps="false"
                            android:textColor="#ffffff"
                            android:textSize="18sp" />


                    </LinearLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_columnWeight="1"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_rowWeight="1"
                    android:backgroundTint="#0d47a1"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="10dp"
                    tools:targetApi="lollipop">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical|bottom"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginBottom="20dp"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/montserrat_alternates"
                            android:gravity="center"
                            android:text="@string/civil"
                            android:textColor="#000000"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/txtCivilStudy"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/roundbutton"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/explore"
                            android:textAllCaps="false"
                            android:textColor="#ffffff"
                            android:textSize="18sp" />


                    </LinearLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_columnWeight="1"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_rowWeight="1"
                    android:backgroundTint="#ffd600"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="10dp"
                    tools:targetApi="lollipop">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical|bottom"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginBottom="20dp"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/montserrat_alternates"
                            android:gravity="center"
                            android:text="@string/mech"
                            android:textColor="#000000"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/txtMechicalStudy"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/roundbutton"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/explore"
                            android:textAllCaps="false"
                            android:textColor="#ffffff"
                            android:textSize="18sp" />


                    </LinearLayout>


                </android.support.v7.widget.CardView>


            </GridLayout>



            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>